--- a/RocketElevatorsApi/Properties/launchSettings.json
+++ b/RocketElevatorsApi/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/battery",
+      "launchUrl": "api/batteries",
       "applicationUrl": "https://localhost:7098;http://localhost:5109",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/battery",
+      "launchUrl": "api/batteries",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
